--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -28,7 +28,7 @@
                         <p id="today_date">27 Dec</p>
                     </div>
                     <div class="main_layer">
-                        <p id="city_name">city name</p>
+                        <p id="city_name"></p>
                         <div class="middle_layer data_hide">
                             <p id="temprature"><span id="temp_value">0</span><sup>o</sup>C</p>
                             <p id="symbol"><i class="fa fa-cloud" aria-hidden="true"></i></p>
